add inches column

--- a/fitbit_main.ipynb
+++ b/fitbit_main.ipynb
@@ -245,11 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Distance_centimeter'] = df.Distance*160934"
+    "df['Distance_inches'] = df.Distance*63360"
    ]
   },
   {
@@ -539,115 +539,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Date\n",
-       "2018-04-26     NaN\n",
-       "2018-04-27   -17.2\n",
-       "2018-04-28    35.8\n",
-       "2018-04-29    -0.6\n",
-       "2018-04-30     3.6\n",
-       "2018-05-01    -6.1\n",
-       "2018-05-02     1.7\n",
-       "2018-05-03   -12.6\n",
-       "2018-05-04    13.8\n",
-       "2018-05-05    -2.8\n",
-       "2018-05-06     4.0\n",
-       "2018-05-07    -2.4\n",
-       "2018-05-08    -6.0\n",
-       "2018-05-09    -3.6\n",
-       "2018-05-10     1.2\n",
-       "2018-05-11     6.6\n",
-       "2018-05-12    -1.8\n",
-       "2018-05-13    -2.7\n",
-       "2018-05-14    -0.6\n",
-       "2018-05-15    -3.1\n",
-       "2018-05-16    -4.0\n",
-       "2018-05-17     6.8\n",
-       "2018-05-18   -34.2\n",
-       "2018-05-19     5.7\n",
-       "2018-05-20    23.6\n",
-       "2018-05-21    -4.3\n",
-       "2018-05-22     4.4\n",
-       "2018-05-23   -11.4\n",
-       "2018-05-24     2.6\n",
-       "2018-05-25    -0.5\n",
-       "              ... \n",
-       "2018-11-07    -6.3\n",
-       "2018-11-08    -9.8\n",
-       "2018-11-09     7.3\n",
-       "2018-11-10    -2.6\n",
-       "2018-11-11   -20.1\n",
-       "2018-11-12    19.2\n",
-       "2018-11-13     8.7\n",
-       "2018-11-14     0.5\n",
-       "2018-11-15    -9.8\n",
-       "2018-11-16    -6.7\n",
-       "2018-11-17   -19.5\n",
-       "2018-11-18    -1.2\n",
-       "2018-11-19    17.6\n",
-       "2018-11-20     7.1\n",
-       "2018-11-21    -6.9\n",
-       "2018-11-22    -1.1\n",
-       "2018-11-23     8.0\n",
-       "2018-11-24    -3.6\n",
-       "2018-11-25     2.9\n",
-       "2018-11-26     6.0\n",
-       "2018-11-27    -6.0\n",
-       "2018-11-28     2.8\n",
-       "2018-11-29    -8.5\n",
-       "2018-11-30     5.0\n",
-       "2018-12-01    -0.3\n",
-       "2018-12-02    -3.7\n",
-       "2018-12-03     1.5\n",
-       "2018-12-04     5.4\n",
-       "2018-12-05    -1.9\n",
-       "2018-12-06     0.5\n",
-       "Name: weight_male_kg, Length: 225, dtype: float64"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.weight_male_kg.diff()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bmr_for_Men=(10*participant_weight)+(6.25*participant_height)-(5*participant_age)+5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to operator (<ipython-input-21-48d9834787a3>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-48d9834787a3>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    10 * participant_weight = (-((6.25*participant_height)-(5*participant_age)+5)/bmr_for_Men)\u001b[0m\n\u001b[0m                                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to operator\n"
-     ]
-    }
-   ],
-   "source": [
-    "10 * participant_weight = (-((6.25*participant_height)-(5*participant_age)+5)/bmr_for_Men)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
@@ -673,106 +564,6 @@
    ],
    "source": [
     "bmr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "315.70107566084425"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bmr - (1700)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "315.70107566084414"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(6.25*participant_height)-(5*participant_age)+5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.15662097891044785"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((6.25*participant_height)-(5*participant_age)+5)/bmr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1566209789104479"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(bmr - (1700))/bmr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.2"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(2+2.4)/2"
    ]
   },
   {
